--- a/src/creek_pirate/pyproject.toml
+++ b/src/creek_pirate/pyproject.toml
@@ -8,6 +8,7 @@ authors = [""]
 python = "^3.9"
 Flask = "^2.0.2"
 requests-html = "^0.10.0"
+Jinja2 = "^3.0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
