--- a/src/creek_pirate/pyproject.toml
+++ b/src/creek_pirate/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 Flask = "^2.0.2"
 requests-html = "^0.10.0"
 Jinja2 = "^3.0.3"
+googletrans = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
